@startuml TeamQuiz_Database
!theme plain
skinparam nodesep 80
skinparam ranksep 100
skinparam minlen 2
skinparam minClassWidth 120
skinparam class {
    BackgroundColor White
    BorderColor Black
    FontSize 10
}
skinparam arrow {
    Color Black
    Thickness 2
}

title TeamQuiz - Auto-Generated Database Schema

class User {
    INTEGER         ★ id               
    DATETIME        ⚪ created_at       
    VARCHAR         ⚪ email            
    BOOLEAN         ⚪ is_active        
    BOOLEAN         ⚪ is_verified      
    VARCHAR         ⚪ password_hash    
    VARCHAR         ⚪ username         
}

class Group {
    INTEGER     ★ id            
    VARCHAR     ⚪ name          
}

class UserGroupAssociation {
    INTEGER   ★ id                           
    INTEGER   ☆ group_id                     
    INTEGER   ☆ user_id                      
}

class Invitation {
    INTEGER   ★ id               
    INTEGER   ☆ from_user_id     
    INTEGER   ☆ group_id         
    INTEGER   ☆ to_user_id       
}

class Subject {
    INTEGER         ★ id                  
    INTEGER         ☆ group_id            
    VARCHAR         ⚪ name                
}

class Flashcard {
    INTEGER           ★ id                      
    INTEGER           ☆ subject_id              
    VARCHAR           ⚪ question                
}

class Answer {
    INTEGER             ★ id                     
    INTEGER             ☆ flashcard_id           
    VARCHAR             ⚪ antwort                
    BOOLEAN             ⚪ is_correct             
}

class RefreshToken {
    INTEGER      ★ id                     
    INTEGER      ☆ user_id                
    DATETIME     ⚪ created_at             
    DATETIME     ⚪ expires_at             
    VARCHAR      ⚪ token                  
}

class QuizSession {
    VARCHAR          ★ id                        
    INTEGER          ☆ group_id                  
    INTEGER          ☆ host_user_id              
    INTEGER          ☆ subject_id                
    DATETIME         ⚪ created_at                
    VARCHAR          ⚪ join_code                 
    VARCHAR          ⚪ status                    
}

class SessionParticipant {
    VARCHAR  ★ session_id
    INTEGER  ★ user_id   
    BOOLEAN  ⚪ is_host   
    DATETIME ⚪ joined_at 
}

class LobbyInvitation {
    INTEGER   ★ id                     
    INTEGER   ☆ invitee_id             
    INTEGER   ☆ inviter_id             
    VARCHAR   ☆ session_id             
    DATETIME  ⚪ created_at             
    VARCHAR   ⚪ status                 
}

class GameState {
    VARCHAR  ★ session_id            
    INTEGER  ☆ current_flashcard_id  
    INTEGER  ⚪ current_question_index
    DATETIME ⚪ ended_at              
    INTEGER  ⚪ max_possible_score    
    DATETIME ⚪ question_started_at   
    DATETIME ⚪ started_at            
    VARCHAR  ⚪ status                
    INTEGER  ⚪ total_score           
}

class Vote {
    INTEGER   ★ id          
    INTEGER   ☆ answer_id   
    INTEGER   ☆ flashcard_id
    VARCHAR   ☆ session_id  
    INTEGER   ☆ user_id     
    DATETIME  ⚪ voted_at    
}

class ChatMessage {
    INTEGER   ★ id                 
    VARCHAR   ☆ session_id         
    INTEGER   ☆ user_id            
    VARCHAR   ⚪ message            
    DATETIME  ⚪ sent_at            
}

User "1" --o "0..*" UserGroupAssociation

Group "1" --o "0..*" UserGroupAssociation

User "1" --o "0..*" Invitation : from_user

User "1" --o "0..*" Invitation : to_user

Group "1" --o "0..*" Invitation

User "1" --o "0..*" RefreshToken

Group "1" --o "0..*" Subject

Subject "1" --o "0..*" Flashcard

Flashcard "1" --o "4" Answer

User "1" --o "0..*" QuizSession : host

Subject "1" --o "0..*" QuizSession

Group "1" --o "0..*" QuizSession

QuizSession "1" --o "0..*" SessionParticipant

User "1" --o "0..*" SessionParticipant

QuizSession "1" --o "0..*" LobbyInvitation

User "1" --o "0..*" LobbyInvitation : inviter

User "1" --o "0..*" LobbyInvitation : invitee

QuizSession "1" --o "1" GameState

Flashcard "0..1" --o "0..1" GameState : current

QuizSession "1" --o "0..*" Vote

Flashcard "1" --o "0..*" Vote

User "1" --o "0..*" Vote

Answer "1" --o "0..*" Vote

QuizSession "1" --o "0..*" ChatMessage

User "1" --o "0..*" ChatMessage

' Layout positioning hints
User -[hidden]right- Group
Group -[hidden]right- Subject
Subject -[hidden]right- Flashcard
Flashcard -[hidden]down- Answer

User -[hidden]down- UserGroupAssociation
UserGroupAssociation -[hidden]down- Invitation
Invitation -[hidden]down- RefreshToken

QuizSession -[hidden]right- SessionParticipant
SessionParticipant -[hidden]right- LobbyInvitation
LobbyInvitation -[hidden]down- GameState
GameState -[hidden]right- Vote
Vote -[hidden]right- ChatMessage

right footer generated by sadisplay v0.4.9

@enduml
